# cidoro

./: LICENSE  README.md  install.sh  pyproject.toml
cidoro/: cli.py  display.py  utils.py
