[project]
name = "cidoro"
version = "0.1.0"
description = "Timer pomodoro em CLI"
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
cidoro = "cidoro.cli:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["cidoro_env*"]
